@@ -1,3 +1,8 @@
+2002-07-20  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* elf64-alpha.c (elf64_alpha_size_dynamic_sections): Only insert
+	DT_PLTGOT into the dynamic section if there is a PLT.
+
 2002-07-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* elfxx-ia64.c: (elfNN_ia64_modify_segment_map): Properly scan
